Responsive issues fixed

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section class="video">
         <h1>FAQ</h1>
         <video controls>
-            <source src="/videos/bees.mp4" type="video/mp4">
+            <source src="./videos/bees.mp4" type="video/mp4">
         </video>
     </section>
 
