Responsive issues fixed

--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
 <body>
     <!-- Video -->
     <section class="video">
-        <h1>FAQ</h1>
         <video controls>
             <source src="./videos/bees.mp4" type="video/mp4">
         </video>
     </section>
 
     <!-- FAQ -->
+    <section class="faq-title">
+        <h1>FAQ</h1>
+    </section>
+    
     <section class="faq-container">
         <div class="faq">
             <h3>What is Buzzy 247?</h3>
