--- a/questionnaire.html
+++ b/questionnaire.html
@@ -21,7 +21,7 @@
 
          <!-- Phone -->
          <label for="Phone">Phone:</label>
-         <p><input placeholder="Ex. 01942010050" oninput="this.className = ''" name="phone"></p>
+         <p><input placeholder="Ex. +971" oninput="this.className = ''" name="phone" value="+971"></p>
         </div>
 
 <!-- Section Two -->
