--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Video -->
     <section class="video">
         <video controls>
-            <source src="/videos/buzzy.mp4" type="video/mp4">
+            <source src="./videos/buzzy.mp4" type="video/mp4">
         </video>
     </section>
 
