Clients requirements completed(2,3,4)

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     
     <!-- Proceed Button -->
     <section class="proceed-btn">
-        <a href="questionnaire.html">Next</a>
+        <a href="questionnaire.html">Proceed to form &raquo;</a>
     </section>
 
 
